--- a/SolidPrinciples/SolidPrinciples.csproj
+++ b/SolidPrinciples/SolidPrinciples.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
+    <Compile Include="FileLogger.cs" />
+    <Compile Include="IDiscount.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
